--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -10,17 +10,28 @@
       <div class="aboutUs__intro__content">
         <div class="aboutUs__intro__content__head">
           <h4 class="aboutUs__intro__content__head-title">
-            Introducing B2B Platform for Pre-owned devices
+            Introducing MobiGarage - A B2B Platform for Electronics, Spares and
+            Accessories
           </h4>
         </div>
-        <p class="aboutUs__intro__content__head-desc">MobiGarage is a pre-owned business scaling platform. Established
-          in 2019, it has been a pioneer in bringing refurbished smartphones to the tier 2, 3, & beyond markets. It is
-          an organized platform that successfully integrates the existing extensive retail footprint of phone sellers
-          and repair kiosks. MobiGarage is increasing the accessibility to quality and affordable smartphones for its
-          end customer. It is shortening the gaps in the stock inventory and prices which are usually experienced in the
-          unorganized pre-owned device industry.</p>
+        <p class="aboutUs__intro__content__head-desc">
+          Introducing MobiGarage – Retail Technology Platform for Electronics,
+          Spares & Accessories MobiGarage is a leading retail technology
+          platform designed to empower businesses across the electronics
+          ecosystem, including mobiles, accessories, and spare parts. The
+          platform enables Tier 2, Tier 3, and emerging market retailers to
+          digitize operations, manage inventory efficiently, and access the best
+          pricing for their products. By connecting a wide network of phone
+          retailers and mobile kiosks, MobiGarage addresses the common gaps in
+          stock availability and pricing in the unorganized electronics market.
+          It enhances the accessibility of high-quality, affordable products for
+          end customers and facilitates smooth liquidation of electronics,
+          spares, and accessories, strengthening India’s circular economy.
+        </p>
       </div>
-      <a routerLink="/products" class="aboutUs__intro-btn">See products &#8594;</a>
+      <a routerLink="/products" class="aboutUs__intro-btn"
+        >See products &#8594;</a
+      >
     </div>
   </div>
   <div class="aboutUs__vision">
@@ -31,8 +42,9 @@
   </div>
   <div class="aboutUs__culture">
     <div class="aboutUs__culture__head">
-      <h4 class="aboutUs__culture__head-desc">Welcome to a team of <br>creators & innovators.</h4>
-
+      <h4 class="aboutUs__culture__head-desc">
+        Welcome to a team of <br />creators & innovators.
+      </h4>
     </div>
     <div class="aboutUs__culture__content">
       <app-culture [cultures]="cultures"></app-culture>
@@ -45,7 +57,5 @@
     <div class="aboutUs__partners__carousel">
       <app-partner-slide [partners]="partners"></app-partner-slide>
     </div>
-
   </div>
-
 </div>
