--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,17 +16,17 @@
       </div> -->
       <section class="header__controls__tabs__products">
         <a routerLink="/products" class="header__controls__tabs__products__title">Products</a>
-        <div class="header__controls__tabs__dropDown">
+        <!-- <div class="header__controls__tabs__dropDown">
           <a routerLink="/products" fragment="Refurbished_smartphones"
             class="header__controls__tabs__dropDown__options">Refurbished Smartphones</a>
           <a routerLink="/products" fragment="spare-parts" class="header__controls__tabs__dropDown__options">Spare
             parts</a>
 
-        </div>
+        </div> -->
       </section>
       <section class="header__controls__tabs__products">
         <a routerLink="/solutions" class="header__controls__tabs__products__title">Solutions</a>
-        <div class="header__controls__tabs__dropDown">
+        <!-- <div class="header__controls__tabs__dropDown">
           <a routerLink="/solutions" fragment="diagnosticTool"
             class="header__controls__tabs__dropDown__options">Diagnostic Tool</a>
           <a routerLink="/solutions" fragment="decision" class="header__controls__tabs__dropDown__options">Decision
@@ -34,7 +34,7 @@
           <a routerLink="/solutions" fragment="optimize" class="header__controls__tabs__dropDown__options">Refurbishment
             optimization</a>
 
-        </div>
+        </div> -->
       </section>
       <section class="header__controls__tabs__products">
         <h4 class="header__controls__tabs__products__title">Company<span
@@ -42,8 +42,8 @@
         <div class="header__controls__tabs__dropDown">
           <a routerLink="/aboutUs" class="header__controls__tabs__dropDown__options">About us</a>
           <a routerLink="/contactUs" class="header__controls__tabs__dropDown__options">Contact us</a>
-          <a routerLink="/blogs" class="header__controls__tabs__dropDown__options">Our blogs</a>
-          <a routerLink="/policies" class="header__controls__tabs__dropDown__options">Our Policies</a>
+          <!-- <a routerLink="/blogs" class="header__controls__tabs__dropDown__options">Our blogs</a>
+          <a routerLink="/policies" class="header__controls__tabs__dropDown__options">Our Policies</a> -->
 
         </div>
       </section>
