--- a/src/app/products/inspection/inspection.component.html
+++ b/src/app/products/inspection/inspection.component.html
@@ -1,8 +1,7 @@
 <div class="test">
   <div class="test__info">
-    <h1 class="test__info__title">Refurbished smartphones</h1>
-    <p class="test__info__desc">Are you looking for refurbished phones that you could trust 100%? Then you are at the
-      right place!</p>
+    <h1 class="test__info__title">Smartphones & Accessories</h1>
+    <p class="test__info__desc">Get smartphones and accessories at best prices, with bulk deals and steady supply—empowering retailers to grow faster and serve customers better.</p>
   </div>
   <div class="test__slider" [ngClass]="{'test__slider__move-left': selectedIndex > 0, 'test__slider__move-right': selectedIndex < tests.length - 1}">
     <div class="test__slider__slide" *ngFor="let test of tests; let i = index"
