bugs and optimisation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
       <app-values [values]="values"></app-values>
     </section>
     <section class="home__mobi">
-      <h4 class="home__mobi-title">Why MobiGarage?</h4>
+      <h4 class="home__mobi-title">Why Fuevation?</h4>
       <app-mobi [reasons]="reasons"></app-mobi>
     </section>
     <section class="home__bachat" *ngFor="let content of mobiBachat">
