--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,8 @@
           </h1>
           <p class="home__head-desc">
             Driving India’s Circular Economy through sustainable E-Waste
-            Management, Refurbishment, and Liquidation of Electronics, Spares,
-            and Accessories across Tier 2 and emerging cities.
+            Management, and Distribution of New Electronics, Spares, and
+            Accessories across Tier 2 and emerging cities.
           </p>
         </section>
         <section class="home__tabs">
@@ -47,7 +47,7 @@
       <article class="home__registerNow-content">
         Buying and Selling made easy. Now scale your
         <br class="home__registerNow-content__break" />
-       Electronics Business with Fuevation
+        Electronics Business with Fuevation
       </article>
       <button class="home__registerNow-btn" (click)="onNavigate()">
         Register Now
@@ -107,10 +107,10 @@
         </section>
       </section>
     </section>
-    <section class="home__feedbacks">
+    <!-- <section class="home__feedbacks">
       <h4 class="home__feedbacks-title">Customer feedback</h4>
       <app-feedback></app-feedback>
-    </section>
+    </section> -->
 
     <section class="home__media">
       <h4 class="home__media-title">Our Media Presence</h4>
